# mol_finder_bot

./: .gitignore  bot.py  chembl_search_engine.py  keyboards.py  message_processing.py  pyproject.toml  states.py  validation_models.py
handlers/: __init__.py  commands.py  fallback.py  log_handler.py  properties.py  search.py  search_by_criteria.py  search_by_identifier.py  similarity_search.py
